--- a/.insomnia/Environment/env_00c6d61f4e32079f000a8a8b0af727467439a853.yml
+++ b/.insomnia/Environment/env_00c6d61f4e32079f000a8a8b0af727467439a853.yml
@@ -1,11 +1,11 @@
 _id: env_00c6d61f4e32079f000a8a8b0af727467439a853
 type: Environment
 parentId: wrk_74387dfa40434ceaaeb105667ed5cc78
-modified: 1634838759239
+modified: 1634954467520
 created: 1634838759239
 name: Base Environment
 data: {}
-dataPropertyOrder: null
+dataPropertyOrder: {}
 color: null
 isPrivate: false
 metaSortKey: 1634838759239
